# octovpn

./: README.md  index.html  package-lock.json  package.json
src/: App.svelte  main.ts  stores.ts  structs.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  windows.rs
src/api/: client.ts  structs.ts
src/lib/: Checkbox.svelte
src/lib/components/: NavBar.svelte  NavBarItem.svelte  Status.svelte  TitleBar.svelte
src/lib/location/: CityItem.svelte  CountryItem.svelte  RegionItem.svelte.unused
src/pages/: Locations.svelte  Login.svelte  Profile.svelte  Settings.svelte
