[package]
name = "octovpn"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-set-size", "window-minimize", "window-start-dragging", "http-request", "process-exit", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.17"
discord-presence = "0.5.15"
lazy_static = "1.4.0"
rand = "0.8.5"
windows = { version = "0.51.1", features = ["Win32_System_Services", "Win32_System_Registry", "Win32_Foundation", "Win32_Security"] }
home = "0.5.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
sha256 = "1.4.0"
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-build = "1.5.0"
use = "0.0.0"
window-shadows = "0.2.2"
openvpn-management = "0.3.0"
regex = "1.10.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
